--- a/app/webroot/css/menu_style.css
+++ b/app/webroot/css/menu_style.css
@@ -10,7 +10,7 @@
 .bubplastic.horizontal {
 	width: 100%;
 	height: 27px;
-	margin: 0;
+	margin-top: 1px;
 	padding: 0;
 	background: #000000 url(images/bg-bubplastic-h.gif) top left repeat-x;
 }
@@ -29,7 +29,7 @@
 .bubplastic.horizontal ul li a {
 	display: block;
 	height: 27px;
-	padding-left: 23px;
+	padding-left: 27px;
 	float: left;
 	text-transform: uppercase;
 	font-family: "Helvetica Neue",helvetica,"microsoft sans serif",arial,sans-serif;
@@ -43,7 +43,7 @@
 	float: left;
 	height: 22px;
 	padding-top: 5px;
-	padding-right: 23px;
+	padding-right: 27px;
 	background: transparent url(images/bg-bubplastic-h.gif) top right no-repeat;
 	cursor: pointer;
 }
